@@ -11,4 +11,5 @@ include(cmake/AddSolarusLibrary.cmake)
 include(cmake/AddSolarusExecutable.cmake)
 include(cmake/AddInstallTargets.cmake)
 include(cmake/AddUnitTests.cmake)
+include(cmake/AddGui.cmake)
 
