@@ -1,0 +1,8 @@
+#include <iostream>
+
+int main(int, char**) {
+
+  std::cout << "Hello world\n";
+  return 0;
+}
+
